# disco-astronomy

./: .buildinfo  .buildinfo.bak  .gitignore  CITATION.cff  LICENSE.md  README.md  architecture.html  changelog.html  cli.html  file_io.html  genindex.html  gui.html  http-routingtable.html  index.html  installation.html  objects.inv  pipeline.html  py-modindex.html  quickstart.html  search.html  searchindex.js  training.html
DISCO_Source_Git/: LICENSE  MANIFEST.in  README.md  pyproject.toml
DISCO_Source_Git/client/: index.html  package-lock.json  package.json  vite.config.js
DISCO_Source_Git/client/src/: App.jsx  InteractiveViewer.jsx  MatplotlibWidget.jsx  SimpleImageViewer.jsx  index.css
DISCO_Source_Git/client/src/components/: AnalysisDashboard.jsx
DISCO_Source_Git/disco/: cli.py  main.py  server.py
DISCO_Source_Git/disco/core/: cnn_inference.py  fits_utils.py  optimization.py
DISCO_Source_Git/docs/: Makefile
DISCO_Source_Git/docs/source/: changelog.rst  conf.py  index.rst  quickstart.rst  training.rst
DISCO_Source_Git/docs/source/_static/: custom_disco.css
DISCO_Source_Git/docs/source/api/: cli_module.rst  cnn_inference.rst  fits_utils.rst  main.rst  optimization.rst  server.rst
DISCO_Source_Git/training/: generate_catalogue.py  simulate_catalogue.py  train_model.py
_modules/: index.html
_modules/disco/: cli.html  main.html  server.html
_modules/disco/core/: cnn_inference.html  fits_utils.html  optimization.html
_sources/: architecture.rst.txt  changelog.rst.txt  cli.rst.txt  file_io.rst.txt  gui.rst.txt  index.rst.txt  installation.rst.txt  pipeline.rst.txt
api/: cli_module.html  cnn_inference.html  fits_utils.html  main.html  optimization.html  server.html
