[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disco-astronomy"
version = "1.0.4"
description = "Herramienta de análisis de discos protoplanetarios"
authors = [
  { name="astrojorgeluis", email="jorge.guzman.l@usach.cl" },
]
readme = "README.md"
requires-python = ">=3.9, <3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "python-multipart==0.0.21",
    "numpy==2.2.6",
    "astropy==6.1.7",
    "scipy==1.15.3",
    "matplotlib==3.10.8",
    "astroquery==0.4.11"
]

[project.scripts]
disco-start = "disco.main:start_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["disco*"]
