[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disco-astronomy"
version = "1.0.6"
description = "Herramienta de análisis de discos protoplanetarios"
authors = [
  { name="astrojorgeluis", email="jorge.guzman.l@usach.cl" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart",
    "astropy>=6.0.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "astroquery>=0.4.7",
    "numpy<2.0.0",      
    "torch>=2.0.0",       
    "tqdm>=4.66.0"        
]

[project.scripts]
disco-start = "disco.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["disco*"]